# quetzal

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  AUTHORS.rst  CHANGELOG.rst  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  config.py  conftest.py  docker-compose.yaml  gcp_role.yaml  init.sh  notes.rst  openapi.yaml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  setup.cfg  setup.py  versioneer.py  wsgi.py
app/: __init__.py  background.py  celery.py  celery_helper.py  cli.py  commands.py  hacks.py  models.py  security.py
app/api/: auth.py  exceptions.py  router.py
app/cli/: __init__.py  data.py  deployment.py  users.py  utils.py
app/helpers/: celery.py  pagination.py  sql.py
app/middleware/: debug.py  gdpr.py  headers.py
app/redoc/: __init__.py  routes.py
docker/app/: Dockerfile  entrypoint-server.sh  entrypoint-worker.sh
docker/db/: Dockerfile  backup.sh  initial.sql  postgresql.conf
docker/nginx/: Dockerfile  entrypoint.sh  genconf.sh  nginx.conf  nginx_extras.conf  renew.sh
docker/rabbitmq/: Dockerfile
docs/: deployment.rst  development.rst  gcp_deployment.rst  gcp_preparations.rst  requirements.txt
docs/db/: schema.xml
docs/diagrams/: db-schema.xml
docs/source/: backups.rst  concepts.rst  conf.py  deployment.rst  design.rst  dev_quickstart.rst  dev_use_cases.rst  development.rst  draft.md  gcp_deployment.rst  gcp_preparations.rst  index.rst  intro.rst  local_server.rst  models.rst  modules.rst  python_doc.rst  quetzal.app.api.data.rst  quetzal.app.api.data.storage.rst  quetzal.rst  (+10 more)
helm/: acme-issuer.yaml
k8s/: app-configmap.yaml  db-deployment.yaml  db-pvc.yaml  db-service.yaml  nginx-deployment.yaml  nginx-pvc.yaml  nginx-service.yaml  rabbitmq-deployment.yaml  rabbitmq-service.yaml  storage-class.yaml  web-deployment.yaml  web-scaler.yaml  web-service.yaml  worker-deployment.yaml  worker-scaler.yaml
migrations/: alembic.ini  env.py
quetzal/: _version.py
tests/: conftest.py  test_app_fixture.py  test_fixtures.py  test_helpers.py  test_models.py  test_users.py  test_workspace_endpoints.py
(+103 files in other folders)
