[tool.poetry]
name = "quetzal"
version = "0.6.0-dev"
description = "Restful API for the storage of data files and the management of their associated metadata"
authors = ["David Ojeda <quetzal.api@gmail.com>"]
license = "BSD-3-Clause"
readme = "README.rst"
homepage = "https://quetz.al"
documentation = "https://quetzal-api.readthedocs.org"
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: Flask",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
    "Topic :: System :: Archiving",
]
packages = [
    { include = "quetzal" },
]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.0.2"
werkzeug = "^0.15.3"
Flask-Login = "^0.4.1"
Flask-Principal = "^0.4.0"
connexion = "^2.2.0"
celery = "^4.2.2"
kombu = "^4.3.0"
Flask-Celery-Helper = "^1.1.0"
SQLAlchemy = "^1.3.1"
Flask-SQLAlchemy = "^2.3.2"
Flask-Migrate = "^2.4.0"
alembic = "^1.0.8"
psycopg2-binary = "^2.7.7"
sqlparse = "^0.3.0"
requests = "^2.20.1"
Click = "^7.0"
syslog-rfc5424-formatter = "^1.0.1"
APScheduler = "^3.6.0"
gunicorn = "^19.9.0"
google-cloud-storage = "^1.14.0"
toml = "^0.10.0"


# Prepared requirements for next iteration when we update all dependencies
#Flask = "^1.1.1"
#werkzeug = "^1.0.0"
#Flask-Login = "^0.5.0"
#Flask-Principal = "^0.4.0"
#connexion = "^2.6.0"
#celery = "^4.4.2"
#kombu = "^4.6.8"
#Flask-Celery-Helper = "^1.1.0"
#SQLAlchemy = "^1.3.15"
#Flask-SQLAlchemy = "^2.4.1"
#Flask-Migrate = "^2.5.3"
#psycopg2-binary = "^2.8.4"
#sqlparse = "^0.3.1"
#requests = "^2.23.0"
#Click = "^7.1.1"
#syslog-rfc5424-formatter = "^1.2.2"
#APScheduler = "^3.6.3"
#gunicorn = "^20.0.4"
#google-cloud-storage = "^1.26.0"


[tool.poetry.dev-dependencies]
docker = "^4.2.0"
pytest = "^5.4.1"
pytest-mock = "^2.0.0"
pytest-docker = "^0.7.2"
coverage = "^5.0.4"
pytest-cov = "^2.8.1"
ipython = "^7.13.0"
ipdb = "^0.13.2"
flask-shell-ipython = "^0.4.1"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
